# Zynthrak

./: Zynthrak – Project Prompt & Vision.txt
.github/workflows/: deploy.yml
server/: Cargo.toml
server/src/: main.rs
zynthrak/: Cargo.toml
zynthrak/src/: main.rs
