[package]
name = "zynthrak"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A decentralized, self-updating peer-to-peer network"

[dependencies]
# Web framework for Bootstrap Server
actix-web = "4.4"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
ring = "0.17"
base64 = "0.21"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
